--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 		<form class="form-group" action="/" method="post">
 			<label for="name">Enter all the tasks to be performed</label>
 			<input type="text" name="name" class="form-control"><br>
+            <input type="text" name="email" class="form-control"><br>
 			<button class="btn btn-primary" type="submit" name="submit" value="add">Submit</button>
 			<button class="btn btn-danger" type="submit" name="submit" value="delete">Delete</button>
 		</form>
